# Pudding

./: .gitignore  CMakeLists.txt  DevelopPlan.md  LICENSE  README.md
.github/workflows/: Ubuntu.yml
docs/: .gitignore  Gemfile  _config.yml  index.md  kde.md  kmeans.md  pca.md
docs/_layouts/: default.html
docs/docs/: usage.md
docs/docs/algorithms/: algorithms.md
docs/docs/algorithms/supervised/: naive_bayes.md  supervised.md
docs/docs/algorithms/unsupervised/: kde.md  kmeans.md  pca.md  unsupervised.md
examples/classification/naive_bayes/: multinomial_text_classification.py
examples/clustering/kmeans/: image_quantization.py
examples/dimension_reduction/pca/: face_decomposition.py
examples/estimation/kde/: density_estimation.py
include/helper/: helper.cuh  helper.h  helper_CUDA.h
include/pudding/: classification.h  clustering.h  dimension_reduction.h  estimation.h
python/: README.md  setup.py
python/pudding/: __init__.py  base.py  lib.py
python/pudding/classification/: __init__.py  naive_bayes.py
python/pudding/clustering/: __init__.py  kmeans.py
python/pudding/dimension_reduction/: __init__.py  pca.py
python/pudding/estimation/: __init__.py  kde.py
python/tests/: testKmeans.py  test_PCA.py  test_kde.py  test_kmeans.py  test_naive_bayes.py
scripts/: benchmark_kmeans.py  benchmarking.py  build.sh  build_wo_test.sh  cpu_memcheck.sh  debug.sh  gpu_memcheck.sh  install_cuda_ubuntu.sh  release.sh  test.sh
scripts/benchmark/: benchmark_kde.py  benchmark_kmeans.py  benchmark_pca.py
src/: CMakeLists.txt
src/classification/: naive_bayes.cc  naive_bayes.cu
src/clustering/: kmeans.cc  kmeans.cu
src/dimension_reduction/: pca.cc  pca.cu
src/estimation/: kde.cc  kde.cu
src/helper/: helper.cu  helper.h  helperCUDA.h
tests/: CMakeLists.txt
tests/helper/: helper.h
tests/unittest/: CMakeLists.txt
tests/unittest/classification/: CMakeLists.txt
tests/unittest/classification/src/: test_naive_bayes.cc
tests/unittest/clustering/: CMakeLists.txt
tests/unittest/clustering/src/: testKmeans.cc  test_kmeans.cc
tests/unittest/dimension_reduction/: CMakeLists.txt
tests/unittest/dimension_reduction/src/: test_pca.cc
tests/unittest/estimation/: CMakeLists.txt
tests/unittest/estimation/src/: test_kde.cc
tests/unittest/helper/: CMakeLists.txt
tests/unittest/helper/src/: test_helper.cu
